Try to get Travis to run properly