@@ -35,19 +35,19 @@
 		</dependency>
 		<!-- http://mvnrepository.com/artifact/com.github.yannrichet/JMathPlot -->
 		<dependency>
-		    <groupId>com.github.yannrichet</groupId>
-		    <artifactId>JMathPlot</artifactId>
-		    <version>1.0.1</version>
+			<groupId>com.github.yannrichet</groupId>
+			<artifactId>JMathPlot</artifactId>
+			<version>1.0.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.github.yannrichet</groupId>
-		    <artifactId>JMathArray</artifactId>
-		    <version>1.0</version>
+			<groupId>com.github.yannrichet</groupId>
+			<artifactId>JMathArray</artifactId>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.github.yannrichet</groupId>
-		    <artifactId>JMathIO</artifactId>
-		    <version>1.0</version>
+			<groupId>com.github.yannrichet</groupId>
+			<artifactId>JMathIO</artifactId>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jfree</groupId>
@@ -64,22 +64,31 @@
 			<artifactId>joinery-dataframe</artifactId>
 			<version>1.7</version>
 		</dependency>
-		    <dependency>
-      		<groupId>commons-cli</groupId>
-	  		<artifactId>commons-cli</artifactId>
-	  		<version>1.2</version>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
 		</dependency>
-	    <dependency>
-	      	<groupId>org.apache.poi</groupId>
-	      	<artifactId>poi</artifactId>
-	      	<version>3.11</version>
-	      	<optional>true</optional>
-    	</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.11</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
